Made API Android compatible.